--- a/CentralServer/CentralServer/CentralServer.csproj
+++ b/CentralServer/CentralServer/CentralServer.csproj
@@ -41,8 +41,13 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SharedLib">
-      <HintPath>..\..\SharedLib\SharedLib\bin\Debug\SharedLib.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SharedLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SharedLib\SharedLib\bin\Release\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -56,13 +61,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientControl.cs" />
-    <Compile Include="Database\DatabaseContext.cs" />
+    <Compile Include="Handlers\ICommandHandler.cs" />
+    <Compile Include="Handlers\MainCommandHandler.cs" />
+    <Compile Include="Migrations\201511152336543_AfterMerge.cs" />
+    <Compile Include="Migrations\201511152336543_AfterMerge.Designer.cs">
+      <DependentUpon>201511152336543_AfterMerge.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\DatabaseContext.cs" />
     <Compile Include="Logging\ILog.cs" />
     <Compile Include="Messaging\IMessageHandler.cs" />
     <Compile Include="Messaging\IMessageQueue.cs" />
     <Compile Include="Messaging\IMessageReceiver.cs" />
     <Compile Include="Messaging\MessageReceiver.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Sessions\ISessionControl.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Log.cs" />
@@ -78,6 +88,7 @@
     <Compile Include="Messaging\Messages\SendCommandMsg.cs" />
     <Compile Include="Messaging\Messages\StopSessionMsg.cs" />
     <Compile Include="Messaging\Messages\WelcomeMsg.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\SocketConnection.cs" />
@@ -89,6 +100,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201511152336543_AfterMerge.resx">
+      <DependentUpon>201511152336543_AfterMerge.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
